--- a/templates/ssh_config.erb
+++ b/templates/ssh_config.erb
@@ -45,3 +45,8 @@ GatewayPorts no
 Ciphers aes256-ctr
 MACs hmac-sha2-512,hmac-sha2-256
 KexAlgorithms diffie-hellman-group-exchange-sha256
+
+############################
+# CVE-2016-0777 & CVE-2016-0778
+############################
+UseRoaming no
