Updated SecC Module for more Flexibility and Compatibility to Adminkonzept.
---
Manually verified on XenServer 6.2.
---
Finished in 3.81 seconds (files took 0.49023 seconds to load)
202 examples, 0 failures

Finished verifying <rhel7-centos7-centos7> (0m46.31s).
---
Finished in 3.48 seconds (files took 0.48613 seconds to load)
202 examples, 0 failures

Finished verifying <rhel7-centos7-rhel7> (0m41.56s).
---
Finished in 4.88 seconds (files took 0.70742 seconds to load)
193 examples, 0 failures

Finished verifying <rhel6-centos6-centos6> (2m6.47s).
---
Finished in 3.81 seconds (files took 0.49023 seconds to load)
202 examples, 0 failures

Finished verifying <rhel7-centos7-centos7> (0m46.31s).

--- a/templates/default_motd.erb
+++ b/templates/default_motd.erb
@@ -1,10 +1,7 @@
 ##############################################################
-# This is a private system. Access allowed to authorised
-# users only!
-##############################################################
 #
-# Welcome to <Servicename>
-# System: - <%= hostname %> -
+# Welcome to <%= Servicename%> -
+# System: - <%= @hostname %> -
 #
 # In case of any questions, do not hesitate to contact us.
 #
