fix for servicename

--- a/templates/default_motd.erb
+++ b/templates/default_motd.erb
@@ -1,6 +1,6 @@
 ##############################################################
 #
-# Welcome to <%= Servicename%> -
+# Welcome to <%= @servicename %> -
 # System: - <%= @hostname %> -
 #
 # In case of any questions, do not hesitate to contact us.
