converted to unix linebreaks

--- a/templates/ssh_config.erb
+++ b/templates/ssh_config.erb
@@ -1,8 +1,8 @@
-###################################
-### MANAGED BY PUPPET ['sshd']  ###
-### DON'T CHANGE THIS FILE HERE ###
-### DO IT ON THE PUPPET MASTER! ###
-###################################
+########################################
+### MANAGED BY PUPPET ['secc_sshd']  ###
+###   DON'T CHANGE THIS FILE HERE    ###
+###   DO IT ON THE PUPPET MASTER!    ###
+########################################
 
 Host *
         GSSAPIAuthentication yes
