--- a/templates/sshd_config.erb
+++ b/templates/sshd_config.erb
@@ -1,8 +1,8 @@
-###################################
-### MANAGED BY PUPPET ['sshd']  ###
-### DON'T CHANGE THIS FILE HERE ###
-### DO IT ON THE PUPPET MASTER! ###
-###################################
+########################################
+### MANAGED BY PUPPET ['secc_sshd']  ###
+###   DON'T CHANGE THIS FILE HERE    ###
+###   DO IT ON THE PUPPET MASTER!    ###
+########################################
 
 #       $OpenBSD: sshd_config,v 1.80 2008/07/02 02:24:18 djm Exp $
 
