--- a/templates/issue_banner.erb
+++ b/templates/issue_banner.erb
@@ -1,11 +1,7 @@
-********************************************************************
-*                                                                  *
-* This system is for the use of authorized users only.  Usage of   *
-* this system is monitored and recorded.                           *
-*                                                                  *
-* Anyone using this system expressly consents to such monitoring   *
-* and is advised that if such monitoring reveals possible          *
-* evidence of criminal activity, system personnel may provide the  *
-* evidence from such monitoring to law enforcement officials.      *
-*                                                                  *
-********************************************************************
+*********************************************************************************************************
+* This system is for the use of authorized users only.  Usage of this system is monitored and recorded. *
+*                                                                                                       *
+* Anyone using this system expressly consents to such monitoring and is advised that if such monitoring *
+* reveals possible evidence of criminal activity, system personnel may provide the evidence from such   *
+* monitoring to law enforcement officials.                                                              *
+*********************************************************************************************************
