--- a/templates/ssh_config.erb
+++ b/templates/ssh_config.erb
@@ -50,3 +50,8 @@ KexAlgorithms diffie-hellman-group-exchange-sha256
 # CVE-2016-0777 & CVE-2016-0778
 ############################
 UseRoaming no
+
+############################
+# to not reveal networking data - http://linux-audit.com/audit-ssh-configurations-hashknownhosts-option/
+############################
+HashKnownHosts yes
