--- a/Vagrantfile.erb
+++ b/Vagrantfile.erb
@@ -13,4 +13,7 @@ Vagrant.configure("2") do |c|
   
   c.vm.synced_folder ".", "/vagrant", disabled: true
   
+  c.vm.provision "shell",
+    inline: "ntpdate time.mms-dresden.de"
+  
 end
