syntax fixing and removed hostname, which is displayed at prompt after login

--- a/templates/default_motd.erb
+++ b/templates/default_motd.erb
@@ -1,7 +1,6 @@
 ##############################################################
 #
-# Welcome to <%= @servicename %> -
-# System: - <%= @hostname %> -
+# Welcome to <%= @servicename %>.
 #
 # In case of any questions, do not hesitate to contact us.
 #
