--- a/templates/ssh_config.erb
+++ b/templates/ssh_config.erb
@@ -13,14 +13,14 @@ Host *
         SendEnv XMODIFIERS
 
 ############################
-# Req 19 Für SSH-Clients gilt, der Schlüssel des SSH-Servers (Hostkey) muss bei der Anmeldung überprüft werden.
+# Req 19 Fuer SSH-Clients gilt, der Schluessel des SSH-Servers (Hostkey) muss bei der Anmeldung ueberprueft werden.
 ############################
 StrictHostKeyChecking ask
 
 ############################
-# Req 20 Für SSH-Client gilt, dass private Schlüssel geschützt werden müssen.
+# Req 20 Fuer SSH-Client gilt, dass private Schluessel geschuetzt werden muessen.
 # *Smartcard (MyCard)
-# *Schlüssel mit einer Passphrase geschützt sein
+# *Schluessel mit einer Passphrase geschuetzt sein
 # *"command=" bzw "from=" Direktive
 #	Wird nicht auf den Zielsystemen umgesetzt, sondern auf Sprungservern.
 ############################
@@ -35,7 +35,7 @@ ForwardX11Trusted no
 ############################
 
 ############################
-# Req 22 Für SSH-Clients gilt, dass Gateway-Ports nicht auf Client-Seite aktiviert werden dürfen.
+# Req 22 Fuer SSH-Clients gilt, dass Gateway-Ports nicht auf Client-Seite aktiviert werden duerfen.
 ############################
 GatewayPorts no
 
