--- a/templates/sshd_config.erb
+++ b/templates/sshd_config.erb
@@ -63,7 +63,7 @@ X11Forwarding no
 X11UseLocalhost yes
 
 ############################
-# Req 9 SSH-„Agent Forwarding“ muss serverseitig deaktiviert werden.
+# Req 9 SSH-"Agent Forwarding" muss serverseitig deaktiviert werden.
 ############################
 <% if @virtual != "xen0" -%>AllowAgentForwarding no<% end -%>
 
