Fix testing for empty value

--- a/templates/sshd_config.erb
+++ b/templates/sshd_config.erb
@@ -75,16 +75,16 @@ PermitTunnel no
 ############################
 # Req 11 Die Nutzung des SSH-Dienstes muss auf Gruppen (bzw. Benutzer) beschraenkt werden.
 ############################
-<% if @sshd_AllowUsers -%>
+<% if @sshd_AllowUsers and @sshd_AllowUsers != "" -%>
 AllowUsers <%= @sshd_AllowUsers %>
 <% end -%>
-<% if @sshd_AllowGroups -%>
+<% if @sshd_AllowGroups and @sshd_AllowGroups != "" -%>
 AllowGroups <%= @sshd_AllowGroups %>
 <% end -%>
-<% if @sshd_DenyUsers -%>
+<% if @sshd_DenyUsers and @sshd_DenyUsers != "" -%>
 DenyUsers <%= @sshd_DenyUsers %>
 <% end -%>
-<% if @sshd_DenyGroups -%>
+<% if @sshd_DenyGroups and @sshd_DenyGroups != "" -%>
 DenyGroups <%= @sshd_DenyGroups %>
 <% end -%>
 
