--- a/templates/sshd_config.erb
+++ b/templates/sshd_config.erb
@@ -163,7 +163,10 @@ SyslogFacility AUTHPRIV
 LoginGraceTime 2m
 
 TCPKeepAlive yes
-Compression no
+# Added a new compression method that delays the start of zlib compression until the user has been authenticated successfully. The new method ("Compression delayed") is on by default in the server. 
+# This eliminates the risk of any zlib vulnerability leading to a compromise of the server from unauthenticated users.
+Compression delayed
+
 ClientAliveInterval 120
 ClientAliveCountMax 3
 
