disable GSSAPIAuthentication for client and server - without params for now

--- a/templates/ssh_config.erb
+++ b/templates/ssh_config.erb
@@ -5,7 +5,7 @@
 ########################################
 
 Host *
-        GSSAPIAuthentication yes
+        GSSAPIAuthentication no
 
         SendEnv LANG LC_CTYPE LC_NUMERIC LC_TIME LC_COLLATE LC_MONETARY LC_MESSAGES
         SendEnv LC_PAPER LC_NAME LC_ADDRESS LC_TELEPHONE LC_MEASUREMENT
