--- a/templates/sshd_config.erb
+++ b/templates/sshd_config.erb
@@ -140,7 +140,7 @@ Banner /etc/issue
 PrintMotd yes
 
 # GSSAPI options
-GSSAPIAuthentication yes
+GSSAPIAuthentication no
 GSSAPICleanupCredentials yes
 
 UsePAM yes
