--- a/templates/sshd_config.erb
+++ b/templates/sshd_config.erb
@@ -20,38 +20,27 @@ Protocol 2
 
 ############################
 # Req 2 Der SSH Dienst muss nicht benoetigte Transport-Verschluesselungsverfahren deaktiveren
-#	MACs muss fuer XenServer geprueft werden. Eventuell nur "MACs hmac-sha1" moeglich.
+#       MACs muss fuer XenServer geprueft werden. Eventuell nur "MACs hmac-sha1" moeglich.
 ############################
 Ciphers <%= @sshd_Ciphers %>
 <% if @virtual != "xen0" -%>MACs <%= @sshd_MACs %><% end %>
 <% if @virtual == "xen0" -%>MACs hmac-sha1<% end %>
 <% if @virtual != "xen0" -%><% if @osfamily == 'RedHat' and @operatingsystemmajrelease == '5' -%><% else -%>KexAlgorithms <%= @sshd_KexAlgorithms %><% end %><% end %>
 
-<% if @setListenAddress -%>
-<% if @adminip -%>
-<%= @adminip -%>
-<% end %>
-<% if @admin_interface -%>
-<% arr = Array.new %>
-<% @admin_interface.each do |ifname| -%>
-<% arr.push("ipaddress_#{ifname}") %>
-<% end -%>
 ############################
 # Req 3 Der SSH-Serverdienst muss ausschliesslich an die Schnittstellen und/oder IP-Adressen gebunden werden, auf denen dieser Dienst erforderlich ist.
-# 	Getestet fuer XenServer und virtuelle Server. Physische Systeme muessten auch funktionieren. VMWare-Hosts muss geprueft werden.
+#       Getestet fuer XenServer und virtuelle Server. Physische Systeme muessten auch funktionieren. VMWare-Hosts muss geprueft werden.
 ############################
-<% arr.each do |ifs| -%>
-<% if scope.lookupvar(ifs) == nil  %>
-<% raise 'The Interface you defined does not exist.' %>
-<% else -%>
-ListenAddress <%= scope.lookupvar(ifs) %>
-<% end -%>
-<% end -%>
-<% else -%>
-# Replace HERE
-# ListenAddress @@ADMINIP@@
-<% end -%>
-<% end -%>
+
+<%- if @listen.is_a?(Array) -%>
+<%- @listen.reject{ |x| x.strip.empty? }.each do |l| -%>
+ListenAddress <%= l %>
+<%- end -%>
+<%- elsif not @listen.strip.empty? -%>
+ListenAddress <%= @listen %>
+<%- else -%>
+ListenAddress <%= @ipaddress %>
+<%- end -%>
 
 ############################
 # Req 4 Der SSH-Serverdienst muss als Stand-Alone Daemon ausgefuehrt werden.
@@ -79,7 +68,7 @@ X11UseLocalhost yes
 ############################
 # Req 9 SSH-"Agent Forwarding" muss serverseitig deaktiviert werden.
 # Req 21 Fuer SSH-Clients gilt, dass die Verwendung eines SSH-Authentifizierungsagenten.
-# 	Wird am Client geloest.
+#       Wird am Client geloest.
 ############################
 <% if @virtual != "xen0" -%><% if @osfamily == 'RedHat' and @operatingsystemmajrelease == '5' -%><% else -%>AllowAgentForwarding <%= @sshd_AllowAgentForwarding %><% end -%><% end -%>
 
@@ -113,15 +102,15 @@ LogLevel VERBOSE
 
 ############################
 # Req 13 Die Authentifizierung an Server-Systemen muss mittels asymmetrischer Kryptoverfahren (Publickey,OTP) erfolgen.
-# 	OTP wird kuenftig durch Serviceshell erfuellt und muss nicht dezentral erfolgen.
-# 	Public Key Authentication ist bis dahin empfohlen
+#       OTP wird kuenftig durch Serviceshell erfuellt und muss nicht dezentral erfolgen.
+#       Public Key Authentication ist bis dahin empfohlen
 # Req 14 Eine Passwort-Authentifizierung (Passwortabfrage) darf nicht durch den SSH-Dienst angeboten werden.
 # Req 15 Die Authentifizierungsinformationen der SSH-Benutzer (oeffentliche SSH-Schluessel im Authorized-KeysFile) muessen kontrolliert und geschuetzt werden.
-#	 Abweichung: Wird nicht per default umgesetzt um bestehende Services nicht negativ zu beeinflussen, ist jedoch für hoehere Compliance konfigurierbar.
+#        Abweichung: Wird nicht per default umgesetzt um bestehende Services nicht negativ zu beeinflussen, ist jedoch fuer hoehere Compliance konfigurierbar.
 #        Achtung: Im Modul zur Konfiguration der User und deren Keys, die hier konfigurierte Location ebenfalls anwenden.
 # Req 17 Host-basierte Authentifizierung (via rhosts/shosts) darf nicht verwendet werden.
 # Req 18 Der Fingerprint des Hostkeys oder der Hostkey muss zur Verfuegung gestellt werden.
-#	Abweichung: Wird nicht auf den einzelnen Servern realisiert.
+#       Abweichung: Wird nicht auf den einzelnen Servern realisiert.
 ############################
 PasswordAuthentication no
 RSAAuthentication yes
@@ -138,7 +127,7 @@ IgnoreRhosts yes
 
 ############################
 # Req 16 Die vom SSH-Server zur Verfuegung gestellten Funktionen und Dienste eines Users muessen auf das erforderliche Minimum reduziert werden ('Least Privilege').
-# 	Dies ist standardmaessig nicht realisiert und muss projektindividuell geloest werden.
+#       Dies ist standardmaessig nicht realisiert und muss projektindividuell geloest werden.
 ############################
 StrictModes yes
 UsePrivilegeSeparation yes
@@ -175,10 +164,9 @@ SyslogFacility AUTHPRIV
 LoginGraceTime 2m
 
 TCPKeepAlive yes
-# Added a new compression method that delays the start of zlib compression until the user has been authenticated successfully. The new method ("Compression delayed") is on by default in the server. 
+# Added a new compression method that delays the start of zlib compression until the user has been authenticated successfully. The new method ("Compression delayed") is on by default in the server.
 # This eliminates the risk of any zlib vulnerability leading to a compromise of the server from unauthenticated users.
 Compression delayed
 
 ClientAliveInterval 120
 ClientAliveCountMax 3
-
