add VerifyHostKeyDNS to ssh_config

--- a/templates/ssh_config.erb
+++ b/templates/ssh_config.erb
@@ -16,6 +16,7 @@ Host *
 # Req 19 Fuer SSH-Clients gilt, der Schluessel des SSH-Servers (Hostkey) muss bei der Anmeldung ueberprueft werden.
 ############################
 StrictHostKeyChecking ask
+VerifyHostKeyDNS ask
 
 ############################
 # Req 20 Fuer SSH-Client gilt, dass private Schluessel geschuetzt werden muessen.
