--- a/templates/sshd_config.erb
+++ b/templates/sshd_config.erb
@@ -111,13 +111,11 @@ LogLevel VERBOSE
 # Req 18 Der Fingerprint des Hostkeys oder der Hostkey muss zur Verfuegung gestellt werden.
 #       Abweichung: Wird nicht auf den einzelnen Servern realisiert.
 ############################
-<% if @sshd_ChallengeResponseAuthentication and @sshd_ChallengeResponseAuthentication != "" -%>
 ChallengeResponseAuthentication <%= @sshd_ChallengeResponseAuthentication %>
-<% end -%>
 PasswordAuthentication no
 PermitEmptyPasswords no
 PubKeyAuthentication yes
-PermitRootLogin without-password
+PermitRootLogin <%= @sshd_PermitRootLogin %>
 
 AuthorizedKeysFile <%= @sshd_AuthorizedKeysFile %>
 <% if @sshd_AuthorizedKeysCommand and @sshd_AuthorizedKeysCommand != "" -%>
